--- a/index.html
+++ b/index.html
@@ -4,11 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
 	<title>Nemusco</title>
-<<<<<<< HEAD
 	<link rel="stylesheet" href="frameworks/bootstrap/dist/css/bootstrap.min.css">
-=======
-	<link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
->>>>>>> 3d7b560899ad041bca6b1232afc75e8abfdc7184
 	<link rel="stylesheet" href="sources/extras.css">
 </head>
 <body>
@@ -59,7 +55,7 @@
 		<p class="font-weight-small text-center">(Filter by language pressing an icon)</p>
 		<div class="mb-5 text-center">
 			<button class="btn bg-transparent" onclick="filtering('Php')">
-				<img src="sources/imgs/PhpIcons.png" alt="" style="width:50px;height:50px">
+				<img src="sources/imgs/phpIcon.png" alt="" style="width:50px;height:50px">
 			</button>
 			<button class="btn bg-transparent" onclick="filtering('Javascript')">
 				<img src="sources/imgs/jsIcon.png" alt="" style="width:50px;height:50px">
