--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<title>Nemusco</title>
 	<link rel="stylesheet" href="frameworks/bootstrap/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="sources/extras.css">
+	<link rel="shortcut icon" href="sources/imgs/Nemusco.png">
 </head>
 <body>
 	<header class="container-fluid " id="header">
