--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
 					<div class="media">
 						<img src="sources/imgs/me.png" alt="" class="mr-3 align-self-center d-none d-md-block" style="height:85px;width: 85px">
 						<div class="media-body">
-							<p class="text-justify">My name is Gustavo Morillo, I am Venezuelan and a student in computer science, I appreciate this career and the knowledge that I have acquired since from a computer I can know how various aspects of life work today. There are more and more projects deployed on the web from different environments and with various purposes, the idea of ​​being part of them, of being part of yours, excites me and if I keep learning I know that I will be the one for them ... Let's keep in touch to get in touch get to work on your next project</p>
+							<p class="text-justify">My name is Gustavo Morillo, I am Venezuelan and a student in computer science, I appreciate this career and the knowledge that I have acquired since from a computer I can know how various aspects of life work today. There are more and more projects deployed on the web from different environments and with various purposes, the idea of ​​being part of them, of being part of yours, excites me... Let's keep in touch to get to work on your next project!!!</p>
 						</div>
 					</div>
 				</div>
 				<div class="col-12 col-md">
 					<h4>Why me?</h4>
 					<p class="text-justify">
-						I have experience in the backend and frontend side since I am aware that robust applications are built with a strong base on both sides of the application I have been expanding my knowledge to solve the needs of the requesting company, although I am interested in a extensive knowledge I have preferred to strengthen my skills in frameworks like AngularJs, Slim. I do not want to make this brief presentation any longer, I will leave the decision in your hands by seeing a list of projects and practices carried out.
+						I have experience in the backend and frontend side since I am aware that robust applications are built with a strong base on both sides of the application I have been expanding my knowledge to solve the needs of the requesting company, although I am interested in a extensive knowledge I have preferred to strengthen my skills in frameworks like AngularJs, Slim, for example. I do not want to make this brief presentation any longer, I will leave the decision in your hands by seeing a list of projects and practices carried out.
 					</p>
 				</div>
 			</div>
