--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 				</div>
 			</div>
 		</div>
-		<p class="text-center display-2 font-weight-bold">Projects</p>
+		<p class="text-center display-2 font-weight-bold">Portfolio</p>
 		<p class="font-weight-small text-center">(Filter by language pressing an icon)</p>
 		<div class="mb-5 text-center">
 			<button class="btn bg-transparent" onclick="filtering('Php')">
